Migrate to webpack, fix wrapping on modal

--- a/docs/main.css
+++ b/docs/main.css
@@ -20,20 +20,11 @@ body {
   left: -50%;
 }
 
-i.fa {
-    float: left;
+tr {
+    height: 30px;
+    vertical-align: top;
 }
 
-#modal-content > span {
-    overflow: hidden;
-    display: block;
-}
-
-#modal-content > i {
-    margin: 2px 10px 2px 10px;
-}
-
-#modal-content {
-    margin-top: 10px;
-    margin-bottom: 10px;
+td {
+    padding: 0 4px 0 4px;
 }
